--- a/package.json
+++ b/package.json
@@ -3,16 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@iconscout/react-unicons": "^1.1.6",
+    "@mui/material": "^5.6.0",
+    
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "1.8.8",
+    "@chakra-ui/system": "^1.12.1",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@hypertheme-editor/chakra-ui": "^0.1.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "apexcharts": "^3.35.0",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^6.2.9",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-js-switch": "^1.1.6",
+    "react-redirect": "^1.0.0",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dropzone": "^12.0.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-table": "^7.7.0",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
