--- a/package.json
+++ b/package.json
@@ -4,26 +4,28 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
-    "@emotion/styled":"^11.8.1",
-    "@mui/material": "^5.11.12",
+    "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
-    "framer-motion": "^6.2.9",
-    "react-apexcharts": "^1.4.0",
+    "@mui/material": "^5.11.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.9",
+    "framer-motion": "^6.2.9",
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.0.4",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
